[package]
name = "chisel"
version = "0.1.0"
authors = ["Michael Dougherty <maackle.d@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = "0.3.3"
itertools = "0.8.1"
regex = "1.3.1"
heck = "0.3.1"
